test/syntax-errors/instruction5.sos
# instruction a n'est pas un entier

declare id[a]